--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["test/**/*.ts"],
+    "include": ["test/**/*.ts", "config/**/*.ts"],
     "exclude": [
     "node_modules",
     "test/specs/test.e2e.ts",
