--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18, 20]
+        node-version: [20]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -34,3 +34,25 @@ jobs:
           BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
           BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
           BROWSERSTACK_ANDROID_APP_ID: ${{ secrets.BROWSERSTACK_ANDROID_APP_ID }}
+
+      - name: Generate Allure report
+        if: always()
+        run: npm run allure:generate
+      - name: Upload Results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-results
+          path: ./reporters/allure-results 
+      - name: Publishing Allure artifact to Github Actions
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-report
+          path: ./allure-report
+      - name: Deploy report
+        uses: JamesIves/github-pages-deploy-action@4.1.3
+        if: always()
+        with:
+          branch: report
+          folder: allure-report 
